# ChangeLog for dev-lang/mono
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/mono/ChangeLog,v 1.193 2010/07/12 17:33:36 fauli Exp $

  12 Jul 2010; Christian Faulhammer <fauli@gentoo.org> mono-2.6.4-r1.ebuild:
  stable x86, bug 327279

  11 Jul 2010; Raúl Porcel <armin76@gentoo.org> mono-1.2.5.1-r1.ebuild,
  mono-1.2.6-r3.ebuild, mono-2.0.1-r1.ebuild:
  Drop sparc keywords

  09 Jul 2010; Pacho Ramos <pacho@gentoo.org> mono-2.6.4-r1.ebuild:
  amd64 stable, bug 327279

*mono-2.6.4-r1 (03 Jul 2010)

  03 Jul 2010; Pacho Ramos <pacho@gentoo.org> -mono-2.4.3.ebuild,
  -mono-2.6.1.ebuild, -mono-2.6.3.ebuild, -mono-2.6.4.ebuild,
  +mono-2.6.4-r1.ebuild, +files/mono-2.6.4-require-glib.patch:
  Revision bump to fix openoffice building problem against mono-2.6.4 (bug
  #321139 by Brian Beardall, Aaron Haviland and others). Remove old.

*mono-2.6.4 (19 May 2010)

  19 May 2010; Patrick Lauer <patrick@gentoo.org> +mono-2.6.4.ebuild:
  Bump for #318991

*mono-2.6.3 (19 Mar 2010)

  19 Mar 2010; Patrick Lauer <patrick@gentoo.org> +mono-2.6.3.ebuild:
  Bump

*mono-2.4.3.1 (20 Feb 2010)

  20 Feb 2010; Patrick Lauer <patrick@gentoo.org> +mono-2.4.3.1.ebuild:
  Bump for #296373

*mono-2.6.1 (20 Feb 2010)

  20 Feb 2010; Patrick Lauer <patrick@gentoo.org> +mono-2.6.1.ebuild:
  Bump for #296373

  11 Feb 2010; Ulrich Mueller <ulm@gentoo.org> mono-1.2.5.1-r1.ebuild,
  mono-1.2.6-r3.ebuild, mono-2.0.1-r1.ebuild:
  Replace license X11 by MIT, bug 298556.

*mono-2.4.3 (06 Feb 2010)

  06 Feb 2010; Arun Raghavan <ford_prefect@gentoo.org> +mono-2.4.3.ebuild:
  Bump to 2.4.3. Pretty much a bugfix release.

  31 Jan 2010; Torsten Veller <tove@gentoo.org> mono-1.2.5.1-r1.ebuild,
  mono-1.2.6-r3.ebuild, mono-2.0.1-r1.ebuild, mono-2.0.9999.ebuild,
  mono-2.4.2.3.ebuild, mono-2.4.9999.ebuild, mono-9999.ebuild:
  Change vecho to echo

  27 Sep 2009; nixnut <nixnut@gentoo.org> mono-2.4.2.3.ebuild:
  ppc stable #284306
