@@ -26,6 +26,7 @@ DIST mono-2.0.1.tar.bz2 19385815 RMD160 ecada26dc398f0ea4cc4cae62885f4d1438bd540
 DIST mono-2.4.2.3.tar.bz2 24815426 RMD160 f52bf6e281b076b859a567c17917577710522684 SHA1 c0e7c2992ef6c1ea3d1fd48ef581aa1ff6ec29cb SHA256 1bab0d4e2906c88736ff5e242f2905f4c3535ccfc05bb5c427b72adf0e9236ae
 DIST mono-2.4.3.1.tar.bz2 24987012 RMD160 0f77d3cb6f42fc13360aab9ccc546690a61ee6f5 SHA1 1a092d33bc3fbdb3fe3e608c6840d7a4da71f33d SHA256 73e04e2b388c037f57aaed86b417a40909499813cd764c82d2684077aecefef1
 DIST mono-2.6.4.tar.bz2 27690544 RMD160 c5c12bd0226ff3b45bb8951bfb5c74415e81d6b1 SHA1 c3b556e63cfa635687a40372a83e4a1b8fd10103 SHA256 c05b9f3bcc3b038db860cdf0da81a0010c148a673a311054efffc5f613cd7922
+DIST mono-2.6.7.tar.bz2 27921963 RMD160 5825ad284e4123e4ddb8933637a3dbf5f57f7f5a SHA1 6528c009d344a21eb0898876369222a7fff76838 SHA256 ae21a997d72e2fb8ea88644c87ab52471e9c97117b937e205ea1835b5a028ce4
 EBUILD mono-1.2.5.1-r1.ebuild 3673 RMD160 99289029794c9a4fa683ed4bd984b4051a7292e1 SHA1 7eb22d508b2f6e8e86a2f8663e1d94753902d465 SHA256 759a3716d83b1051e54538f242df1dd6dc92bded28401e5d6ad9be4b426031c1
 EBUILD mono-1.2.6-r3.ebuild 3911 RMD160 7ccec547f0533cac827ddcc0f8db93df27083251 SHA1 3ba1a0f3d9a1463edca10babf732379a06aecae3 SHA256 24707576453a78de575ac949c2d19228573b2f0cca84f35508f1b80956936848
 EBUILD mono-2.0.1-r1.ebuild 3336 RMD160 f5af5b4c59d00c7f0d37774cbdc712435e1f3b65 SHA1 9e5bc6fddac529a324fd913b7359f8f6f2528438 SHA256 0439d5e65e5733c1fafa929c8ef958c4f72c6d2c1af6baab495686b03f0aacea
@@ -34,13 +35,14 @@ EBUILD mono-2.4.2.3.ebuild 7151 RMD160 c2bbe180e11197bde2a66470650a3df7a2457e6e 
 EBUILD mono-2.4.3.1.ebuild 7157 RMD160 63827e3616a2309735957af316de803209c98e04 SHA1 17669288558ee84d191b7be890a32613d1d91a8e SHA256 b69a1d8793cabb140519127d0c5bb15562b85ec19066138d1d484641b8ffdaf7
 EBUILD mono-2.4.9999.ebuild 7518 RMD160 418f1ac99aab05b312fc4b29ebdede696f11a825 SHA1 ae4c7a6392f097dd410ffb04d0a0ccba69c30f09 SHA256 10cba6104c6f149ef552f6f29f2daa727f7f010bcf676ad41611621637385660
 EBUILD mono-2.6.4-r1.ebuild 7199 RMD160 eb43fbe763657ada61087cde7a09b4ecc4c08be7 SHA1 f794643b791803570f3111a88e9082662ee6294a SHA256 7f20e3595e27fda4539a7dfca07651298873f9c8e441bb5f333db235a6709966
+EBUILD mono-2.6.7.ebuild 7198 RMD160 c39db521d9c3be22545f622c58462664d3499109 SHA1 c2b1d81548a7c9c13fce1dd1cd129be61da61800 SHA256 0cdf11bd151856806276644f8b7e0abcf713eef73c1180651a3749e4b05e8c54
 EBUILD mono-9999.ebuild 7514 RMD160 55cdc9888175ef15226016d5bd38f6e030050c86 SHA1 3288813c56d7042dbe53ebabf3d0209efef20f04 SHA256 87c00e70ed8eb0a34e44d03c5a99b42b69da9617966860bb72ccda2752acb042
-MISC ChangeLog 40695 RMD160 184b11390edcd30bd61786b0d26d1bad8651e0c0 SHA1 276f0484e986ddcf8038f6eb7b77b8c13de80796 SHA256 66edc191829e880495d59800c823860210f126ab66bd025605e8fd407c2b5e19
+MISC ChangeLog 40804 RMD160 40feac3629b8af010233cc5a1127502e27a3233b SHA1 1c7d98066ac4459b6775aea5d34eba983646c83b SHA256 0ffb402aa6c091f1a771c84b7e81fa045a3d64b5601f9460ce59dff8bda45cdf
 MISC metadata.xml 372 RMD160 163faef818f92e85913da4add580c9b534fcc1f4 SHA1 af2ccd5f8de56a233139452e6c7ec9cf3c4a749e SHA256 05441e51cf289ea8e4039500f8b4cece85ead51bb46f8ea9588bd6d831239315
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkw7UlsACgkQNQqtfCuFnePCvgCggYiFKAhlqZTIgaGghcbOgl4n
-JkkAmwaGxmFZxlCDn9Pzgxsj4HpCFDO/
-=ljx7
+iEYEARECAAYFAkxHKrcACgkQCaWpQKGI+9QrYQCfY7je1Kbt25+dUJ4i7emfxNNz
+JosAn1f7NAeHTg++cLKoz1vKBz+ickik
+=NyjU
 -----END PGP SIGNATURE-----
