@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/mono
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/mono/ChangeLog,v 1.193 2010/07/12 17:33:36 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/mono/ChangeLog,v 1.194 2010/07/21 17:13:14 pacho Exp $
+
+*mono-2.6.7 (21 Jul 2010)
+
+  21 Jul 2010; Pacho Ramos <pacho@gentoo.org> +mono-2.6.7.ebuild:
+  Version bump
 
   12 Jul 2010; Christian Faulhammer <fauli@gentoo.org> mono-2.6.4-r1.ebuild:
   stable x86, bug 327279
